--- a/index.html
+++ b/index.html
@@ -1,135 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Company Landing Page - The Pop Shop</title>
     <!-- Bootstrap CSS CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+
     <!-- Custom Styles -->
-    <style>
-        .hero {
-            background: #007bff;
-            color: white;
-            padding: 50px 0;
-        }
-        .services {
-            padding: 50px 0;
-        }
-        .about {
-            background: #f8f9fa;
-            padding: 50px 0;
-        }
-        footer {
-            background: #343a40;
-            color: white;
-            padding: 20px 0;
-        }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="mycss.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div
+          class="container d-flex justify-content-between align-items-center"
+        >
+          <a class="navbar-brand mx-auto" href="#">The Pop Shop</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#hero"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#services">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#about">About</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <main>
+      <section id="hero" class="hero d-flex align-items-center">
         <div class="container">
-            <a class="navbar-brand" href="#">The Pop Shop</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#hero">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                </ul>
+          <div class="row text-center">
+            <div class="col-md-12 mb-3">
+              <h1 class="text-center">What's Your Flavor!</h1>
+              <p>
+                Passionate popcorn enthusiasts that specialize in gourmet
+                popcorn.
+              </p>
+              <a href="#" class="btn btn-primary">Learn More</a>
             </div>
+          </div>
         </div>
-    </nav>
-</header>
-
-<main>
-    <section id="hero" class="hero d-flex align-items-center">
+      </section>
+      <section id="services" class="services">
         <div class="container">
-            <h1>What's Your Flavor!</h1>
-            <p>Passionate popcorn enthusiastst that specializes in gourmet popcorn.</p>
-            <a href="#" class="btn btn-outline-light">Learn More</a>
+          <h2 class="text-center">Our Services</h2>
+          <div class="row text-center">
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Shipping</h5>
+                  <p class="card-text">Free Shipping over $50.</p>
+                  <a href="#" class="btn btn-primary">Learn More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Opening Hours</h5>
+                  <p class="card-text">Mon thru Wednesday.</p>
+                  <p class="time">9:00 AM - 5:00 PM</p>
+                  <a href="#" class="btn btn-primary">Learn More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Pick Up Only</h5>
+                  <p class="card-text">Saturdays.</p>
+                  <a href="#" class="btn btn-primary">Learn More</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-    </section>
+      </section>
 
-    <section id="services" class="services">
+      <section id="about" class="about">
         <div class="container">
+            <h2 class="text-center">About Us</h2>
             <div class="row text-center">
                 <div class="col-md-4 mb-3">
                     <div class="card">
+
                         <div class="card-body">
-                            <h5 class="card-title">Shipping</h5>
-                            <p class="card-text">Free Shipping over $50.</p>
+                            <h5 class="card-title">Our Mission</h5>
+                            <p class="card-text">To provide the best gourmet popcorn experience.</p>
                             <a href="#" class="btn btn-primary">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Repeat for other services -->
+                        </div> 
+                    </div> 
+                </div> 
             </div>
         </div>
     </section>
+    </main>
 
-    <section id="services" class="services">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Opening Hours</h5>
-                            <p class="card-text">Mon thru Friday.</p>
-                            <a href="#" class="btn btn-primary">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Repeat for other services -->
-            </div>
-        </div>
-    </section>
-
-    <section id="services" class="services">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-md-4 mb-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Pick Up Only</h5>
-                            <p class="card-text">Saturdays.</p>
-                            <a href="#" class="btn btn-primary">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Repeat for other services -->
-            </div>
-        </div>
-    </section>
-
-    <section id="about" class="about">
-        <div class="container">
-            <h2>About Our Company</h2>
-            <p>Your Destination for Delicious Popcorn!.</p>
-        </div>
-    </section>
-</main>
-
-<footer class="text-center">
-    <div class="container">
-        <p>Company Name © 2023</p>
+    <footer class="text-center">
+      <div class="container">
+        <p>THE POP SHOP © 2023</p>
         <p>Contact us: eatgood@company.com</p>
-    </div>
-</footer>
+      </div>
+    </footer>
 
-<!-- Bootstrap Bundle with Popper.js -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-</body>
+    <!-- Bootstrap Bundle with Popper.js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
