--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -108,29 +111,42 @@
 
       <section id="about" class="about">
         <div class="container">
-            <h2 class="text-center">About Us</h2>
+          <h2 class="text-center">About Us</h2>
+          <div class="row text-center">
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Our Mission</h5>
+                  <p class="card-text">
+                    To provide the best gourmet popcorn experience.
+                  </p>
+                  <a href="#" class="btn btn-primary">Learn More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="contact" class="contact">
+        <div class="container">
+            <h2 class="text-center">Contact Us</h2>
             <div class="row text-center">
                 <div class="col-md-4 mb-3">
                     <div class="card">
-
                         <div class="card-body">
-                            <h5 class="card-title">Our Mission</h5>
-                            <p class="card-text">To provide the best gourmet popcorn experience.</p>
-                            <a href="#" class="btn btn-primary">Learn More</a>
-                        </div> 
-                    </div> 
-                </div> 
-            </div>
-        </div>
-    </section>
+                            <h5 class="card-title">Get in Touch</h5>
+                            <p class="card-text">We’d love to hear from you! Reach out via email:</p>
+                            <a href="mailto:eatgood@company.com">eatgood@company.com</a>
+                        </div>
+                    </div>
     </main>
 
-    <footer class="text-center">
+    <footer id="contact" class="text-center">
       <div class="container">
-        <p>THE POP SHOP © 2023</p>
-        <p>Contact us: eatgood@company.com</p>
+          <p>THE POP SHOP © 2023</p>
       </div>
-    </footer>
+  </footer>
 
     <!-- Bootstrap Bundle with Popper.js -->
     <script
